--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
         <ul class="list container page-catalog">
           <li class="catalog">
             <img src="./images/page1/img1-min.jpg" alt="foto4" width="264" height="260" />
-            <h3 class="title-text-on">Mark Guerrero</h3>
-            <p class="title-text">Product Designer</p>
+            <div class="name-person">
+              <h3 class="title-text-on">Mark Guerrero</h3>
+              <p class="title-text">Product Designer</p>
+            </div>
           </li>
           <li class="catalog">
             <img src="./images/page1/img2-min.jpg" alt="foto5" width="264" height="260" />
