--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                 <ul class="list container portfolio-content">
                     <li class="container portfolio-content-spase">
                         <div class="container portfolio-title">
-                            <a href="#" class="link">
+                            <a href="#" class="link container portfolio-title">
                                 <img src="./images/page2/img-8-min.jpg" alt="Banking App Interface Concept" width="360"
                                     height="300" class="portfolio-border" />
                                 <h2 class="title-text-portfolio">Banking App Interface Concept</h2>
@@ -62,61 +62,77 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-7-min.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-border"  />
-                            <h2 class="title-text-portfolio">Cashless Payment</h2>
-                            <p class="title-text">Marketing</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-7-min.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-border"  />
+                                <h2 class="title-text-portfolio">Cashless Payment</h2>
+                                <p class="title-text">Marketing</p>
+                            </a>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-6-min.jpg" alt="Meditation App" width="360" height="300" class="portfolio-border" />
-                            <h2 class="title-text-portfolio">Meditation App</h2>
-                            <p class="title-text">App</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-6-min.jpg" alt="Meditation App" width="360" height="300" class="portfolio-border" />
+                                <h2 class="title-text-portfolio">Meditation App</h2>
+                                <p class="title-text">App</p>
+                            </a>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-5-min.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-border" />
-                            <h2 class="title-text-portfolio">Taxi Service</h2>
-                            <p class="title-text">Marketing</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-5-min.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-border" />
+                                <h2 class="title-text-portfolio">Taxi Service</h2>
+                                <p class="title-text">Marketing</p>
+                            </a>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-4-min.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-border" />
-                            <h2 class="title-text-portfolio">Screen Illustrations</h2>
-                            <p class="title-text">Design</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-4-min.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-border" />
+                                <h2 class="title-text-portfolio">Screen Illustrations</h2>
+                                <p class="title-text">Design</p>
+                            </a>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-3-min.jpg" alt="Online Courses" width="360" height="300" class="portfolio-border" />
-                            <h2 class="title-text-portfolio">Online Courses</h2>
-                            <p class="title-text">Marketing</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-3-min.jpg" alt="Online Courses" width="360" height="300" class="portfolio-border" />
+                                <h2 class="title-text-portfolio">Online Courses</h2>
+                                <p class="title-text">Marketing</p>
+                            </a>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-2-min.jpg" alt="Instagram Stories Concept" width="360"
-                                height="300" class="portfolio-border" />
-                            <h2 class="title-text-portfolio">Instagram Stories Concept</h2>
-                            <p class="title-text">Design</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-2-min.jpg" alt="Instagram Stories Concept" width="360"
+                                    height="300" class="portfolio-border" />
+                                <h2 class="title-text-portfolio">Instagram Stories Concept</h2>
+                                <p class="title-text">Design</p>
+                            </a>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-1-min.jpg" alt="Organic Food" width="360" height="300" class="portfolio-border" />
-                            <h2 class="title-text-portfolio">Organic Food</h2>
-                            <p class="title-text">Web Site</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-1-min.jpg" alt="Organic Food" width="360" height="300" class="portfolio-border" />
+                                <h2 class="title-text-portfolio">Organic Food</h2>
+                                <p class="title-text">Web Site</p>
+                            </a>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="link">
-                            <img src="./images/page2/img-0-min.jpg" alt="Fresh Coffee" width="360" height="300" class="portfolio-border" />
-                            <h2 class="title-text-portfolio">Fresh Coffee</h2>
-                            <p class="title-text">Web Site</p>
-                        </a>
+                        <div class="container portfolio-title">
+                            <a href="#" class="link container portfolio-title">
+                                <img src="./images/page2/img-0-min.jpg" alt="Fresh Coffee" width="360" height="300" class="portfolio-border" />
+                                <h2 class="title-text-portfolio">Fresh Coffee</h2>
+                                <p class="title-text">Web Site</p>
+                            </a>
+                        </div>
                     </li>
                 </ul>
             </div>
