--- a/index.html
+++ b/index.html
@@ -39,38 +39,38 @@
   </header>
   <!-- Унікальний контент сторінки-->
   <main>
-    <section class="section-hero container">
+    <section class="section-hero">
       <div class="container">
         <h1 class="hero-text">Effective Solutions for Your Business</h1>
         <button type="button" class="btn-hero">Order Service</button>
       </div>
     </section>
-    <section class="container">
+    <section>
       <div class="container list-content">
-        <h2 hidden>advanced</h2>
+        <h2 class="visually-hidden">advanced</h2>
         <ul class="list list-past">
-          <li class="list list-past-content">
+          <li class="list-past-content">
             <h3 class="title-text-on">Strategy</h3>
             <p class="title-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="list-past-content">
             <h3 class="title-text-on">Punctuality</h3>
             <p class="title-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="list-past-content">
             <h3 class="title-text-on">Diligence</h3>
             <p class="title-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="list-past-content">
             <h3 class="title-text-on">Technologies</h3>
             <p class="title-text">
               Design practice focused on digital experiences. We bring forth a
@@ -80,7 +80,7 @@
         </ul>
       </div>
     </section>
-    <section class="section-what container">
+    <section class="section-what">
       <div class="container">
         <h2 class="title-page">What are we doing</h2>
         <ul class="list list-back">
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-    <section class="section-team container">
+    <section class="section-team">
       <div class="container">
         <h2 class="title-page">Our Team</h2>
         <ul class="list container page-catalog">
