--- a/portfolio.html
+++ b/portfolio.html
@@ -21,18 +21,18 @@
         <nav class="container menu">
           <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
           <ul class="list hero-menu">
-            <li><a href="./index.html" class="link">Studio</a></li>
-            <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-            <li><a href="" class="link">Contacts</a></li>
+            <li><a href="./index.html" class="link hero-menu-studio">Studio</a></li>
+            <li><a href="./portfolio.html" class="link hero-menu-studio">Portfolio</a></li>
+            <li><a href="" class="link hero-menu-studio">Contacts</a></li>
           </ul>
         </nav>
         <address class="contact-data container">
           <ul class="list adres-menu">
             <li>
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="link hero-menu-studio">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="link hero-menu-studio">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -51,86 +51,104 @@
                     <li><button type="button" class="btn-portfolio">Marketing</button></li>
                 </ul>
                 <ul class="list container portfolio-content">
-                    <li class="container portfolio-content-spase">
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="portfolio-title">
+                            <a href="#" class="link portfolio-title">
                                 <img src="./images/page2/img-8-min.jpg" alt="Banking App Interface Concept" width="360"
                                     height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Banking App Interface Concept</h2>
-                                <p class="title-text">App</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Banking App Interface Concept</h2>
+                                    <p class="title-text">App</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link container">
                                 <img src="./images/page2/img-7-min.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-border"  />
-                                <h2 class="title-text-portfolio">Cashless Payment</h2>
-                                <p class="title-text">Marketing</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Cashless Payment</h2>
+                                    <p class="title-text">Marketing</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link">
                                 <img src="./images/page2/img-6-min.jpg" alt="Meditation App" width="360" height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Meditation App</h2>
-                                <p class="title-text">App</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Meditation App</h2>
+                                    <p class="title-text">App</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link container">
                                 <img src="./images/page2/img-5-min.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Taxi Service</h2>
-                                <p class="title-text">Marketing</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Taxi Service</h2>
+                                    <p class="title-text">Marketing</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link container">
                                 <img src="./images/page2/img-4-min.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Screen Illustrations</h2>
-                                <p class="title-text">Design</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Screen Illustrations</h2>
+                                    <p class="title-text">Design</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link container">
                                 <img src="./images/page2/img-3-min.jpg" alt="Online Courses" width="360" height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Online Courses</h2>
-                                <p class="title-text">Marketing</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Online Courses</h2>
+                                    <p class="title-text">Marketing</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link container">
                                 <img src="./images/page2/img-2-min.jpg" alt="Instagram Stories Concept" width="360"
                                     height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Instagram Stories Concept</h2>
-                                <p class="title-text">Design</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Instagram Stories Concept</h2>
+                                    <p class="title-text">Design</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link container">
                                 <img src="./images/page2/img-1-min.jpg" alt="Organic Food" width="360" height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Organic Food</h2>
-                                <p class="title-text">Web Site</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Organic Food</h2>
+                                    <p class="title-text">Web Site</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
-                        <div class="container portfolio-title">
-                            <a href="#" class="link container portfolio-title">
+                    <li class="portfolio-content-spase">
+                        <div class="container">
+                            <a href="#" class="link container">
                                 <img src="./images/page2/img-0-min.jpg" alt="Fresh Coffee" width="360" height="300" class="portfolio-border" />
-                                <h2 class="title-text-portfolio">Fresh Coffee</h2>
-                                <p class="title-text">Web Site</p>
+                                <div class="content-title">
+                                    <h2 class="title-text-portfolio">Fresh Coffee</h2>
+                                    <p class="title-text">Web Site</p>
+                                </div>
                             </a>
                         </div>
                     </li>
