--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container heder-past">
         <nav class="menu">
           <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
-          <ul class="list">
+          <ul class="list menu-past">
             <li><a href="./index.html" class="link hero-menu">Studio</a></li>
             <li><a href="./portfolio.html" class="link hero-menu">Portfolio</a></li>
             <li><a href="" class="link hero-menu">Contacts</a></li>
