--- a/portfolio.html
+++ b/portfolio.html
@@ -15,29 +15,29 @@
 
 <body>
 
-    <!-- Хедер сторінки-->
-    <header class="heder-studio">
-        <div class="container heder-past">
-            <nav class="menu">
-                <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
-                <ul class="list">
-                    <li><a href="./index.html" class="link hero-menu">Studio</a></li>
-                    <li><a href="./portfolio.html" class="link hero-menu">Portfolio</a></li>
-                    <li><a href="" class="link hero-menu">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="contact-data">
-                <ul class="list adres-menu">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-                    </li>
-                </ul>
-            </address>
-        </div>
-    </header>
+  <!-- Хедер сторінки-->
+  <header class="heder-studio">
+    <div class="container heder-past">
+        <nav class="menu">
+          <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
+          <ul class="list menu-past">
+            <li><a href="./index.html" class="link hero-menu">Studio</a></li>
+            <li><a href="./portfolio.html" class="link hero-menu">Portfolio</a></li>
+            <li><a href="" class="link hero-menu">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contact-data">
+          <ul class="list adres-menu">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+    </div>
+  </header>
     <!-- Унікальний контент сторінки-->
     <main>
         <section class="section-portfolio">
