--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <address class="contact-data">
           <ul class="list adres-menu">
             <li>
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="link meil-tel">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="link meil-tel">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
