--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a href="mailto:info@devstudio.com" class="link meil-tel">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="link meil-tel">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -62,7 +62,7 @@
                         </a>
                     </li>
                     <li class="portfolio-content-spase">
-                        <a href="#" class="link container">
+                        <a href="#" class="link">
                             <img src="./images/page2/img-7-min.jpg" alt="Cashless Payment" width="360" height="300"
                                 class="portfolio-border" />
                             <div class="content-title">
